FIX: value of shift header in chat changed on mobile

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -295,7 +295,7 @@
     .header-nav {
 
       @include media-breakpoint-down($desktop-breakpoint) {
-        transform: translateX(-100%);
+        transform: translateX(calc(-100% - 5px));
       }
     }
 
